--- a/src/index.css
+++ b/src/index.css
@@ -2,13 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Animation layer personnalisée (optionnel) */
 .reveal-layer {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: white;
   transform-origin: top;
-  z-index: 50;
+  will-change: transform;
 }
